force-app/main/default/objects/ssot__EducationApplication__dlm/fields/ssot__AmountPaidAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__AmountPaidAmount__c</fullName>
    <label>Amount Paid</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AmountPaidAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>