force-app/main/default/objects/ssot__EducationApplication__dlm/fields/ssot__ApplicantEmailText__c.field-meta.xml
<CustomField>
    <fullName>ssot__ApplicantEmailText__c</fullName>
    <label>Applicant Email</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ApplicantEmailText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>