force-app/main/default/objects/ssot__EducationApplication__dlm/fields/ssot__ApplicantPhoneText__c.field-meta.xml
<CustomField>
    <fullName>ssot__ApplicantPhoneText__c</fullName>
    <label>Applicant Phone</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ApplicantPhoneText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>