force-app/main/default/objects/ssot__EducationApplication__dlm/fields/ssot__DecisionReleaseDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__DecisionReleaseDate__c</fullName>
    <label>Decision Release Date</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DecisionReleaseDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>