force-app/main/default/objects/ssot__EducationApplication__dlm/fields/ssot__LearningProgramId__c.field-meta.xml
<CustomField>
    <fullName>ssot__LearningProgramId__c</fullName>
    <label>Learning Program</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LearningProgramId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>