force-app/main/default/objects/ssot__EducationApplication__dlm/fields/ssot__PaymentDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__PaymentDateTime__c</fullName>
    <label>Payment Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PaymentDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>