force-app/main/default/objects/ssot__EducationApplication__dlm/fields/ssot__rel_1719817599775_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719817599775_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EducationApplication_AcademicTermId__rel</label>
    <referenceTo>ssot__AcademicTerm__dlm</referenceTo>
    <relationshipLabel>EducationApplication_AcademicTermId__rel</relationshipLabel>
    <relationshipName>rel_1719817599775_end</relationshipName>
    <type>Lookup</type>
</CustomField>