force-app/main/default/objects/ssot__EducationApplication__dlm/fields/ssot__rel_1719819617566_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719819617566_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EducationApplication_ProgramTermAppl_rel</label>
    <referenceTo>ssot__ProgramTermApplicationTimeline__dlm</referenceTo>
    <relationshipLabel>EducationApplication_ProgramTermAppl_rel</relationshipLabel>
    <relationshipName>rel_1719819617566_end</relationshipName>
    <type>Lookup</type>
</CustomField>