force-app/main/default/objects/ssot__EducationApplication__dlm/fields/ssot__rel_1719819808244_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719819808244_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EducationApplication_OpportunityId_m_rel</label>
    <referenceTo>ssot__Opportunity__dlm</referenceTo>
    <relationshipLabel>EducationApplication_OpportunityId_m_rel</relationshipLabel>
    <relationshipName>rel_1719819808244_end</relationshipName>
    <type>Lookup</type>
</CustomField>