force-app/main/default/objects/ssot__EducationApplication__dlm/fields/ssot__SubmittedByContactId__c.field-meta.xml
<CustomField>
    <fullName>ssot__SubmittedByContactId__c</fullName>
    <label>Submitted By Contact</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SubmittedByContactId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>